# blog-deploying-sagemaker-pipelines

./: .gitignore  README.md  pyproject.toml  requirements.txt
data_project/: app.py  cdk.json  pyproject.toml  requirements.txt
data_project/data_project/: pipelines_stack.py
data_project/pipelines/definitions/: base.py  example_pipeline_definition.py
data_project/pipelines/sources/example_pipeline/: evaluate.py
docs/: diagrams.drawio
infrastructure_project/: app.py  cdk.json  pyproject.toml
infrastructure_project/infrastructure_project/: sagemaker_stack.py  vpc_stack.py
